--- a/css/blog.css
+++ b/css/blog.css
@@ -1,26 +1,20 @@
 body {
-  background-color: #ffffff;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://picsum.photos/id/728/367/267");
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
+  background-color: #3a3a5e;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  url(/Img/home2pic1.png);
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover; 
+margin: 1.5;
+padding: 1.5;  
    }
 #blog-container {
     margin-top: 14px;
     margin-bottom: 15px;
 }
-.card {
-    margin-top: 15px;
-    border-radius: 30px;
-    box-shadow: 5px 5px #888888;
-}
-.card:hover{
-    box-shadow: 7px 7px #242323;
 
-}
+
 a:hover{
     color:rgb(15, 106, 180)
 }
@@ -28,58 +22,25 @@ a:hover{
 #image-slider {
     padding-left: 0px;
     padding-right: 0px;
-}
-.dropbtn {
-    background-color: #ffffff;
-    color: rgb(15, 106, 180);
-   
-    font-size: 16px;
-    border: none;
-  }
+} 
   
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #666464;
-    min-width: 160px;
-    box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    border-radius: 20px;
-  }
-  .carousel-caption:hover{
-    color:rgb(11, 12, 12);}
-
-  .dropdown-content a {
-    color: rgb(255, 255, 255);
-    padding: 12px 104px;
-    text-decoration: none;
-    display: block;
-  }
-  .list-group-item:hover{ background-color: rgb(199, 197, 197)}
-  
-  .dropdown-content a:hover {
-    color: rgb(15, 106, 180);
-    background-color: #ddd;
-    border-radius: 20px;
-    box-shadow: 0px 100px 100px 0px rgba(0, 0, 0, 0.2);}
-  
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  .dropdown:hover .dropbtn {background-color: rgb(255, 255, 255);}
+ .customheight{
+  max-width: 800px;
+   height:160px;
+    border-radius: 3px; 
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+}  
   
 footer{
-  background-color: #04041d;
+  background-color: #07072c;
+  font-family:'Times New Roman', Times, serif;
 }
 .textcontent {
   color: rgb(255, 255, 255);
   text-decoration: none;
-  font-size: 20px;
+  font-size: 15px;
   
 }
 .border-left {
@@ -97,13 +58,114 @@ footer{
   box-shadow: 0px 100px 100px 0px rgba(0, 0, 0, 0.2);
   }
   .txt{
-    font-size: 45px;
+    font-size: 40px;
     font-family:'Times New Roman', Times, serif;
   }
   .txt1{
-    font-size: 40px;
+
+    font-size: 30px;
+    font-family:'Times New Roman', Times, serif;
+  }
+  .txt2{
+    color: rgb(255, 255, 255);
+    font-size: 38px;
     font-family:'Times New Roman', Times, serif;
   }
   nav{background-color: #070720;
 
   }
+  
+.main{
+	width: 400px;
+	height: 500px;	
+	overflow: hidden;
+	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
+	border-radius: 10px;
+	box-shadow: 10px 25px 55px rgba(0, 0, 0, 0.644);
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-color: #0ada0a;
+  border: 300px;
+}
+
+
+
+#chk{
+	display: none;
+}
+
+label{
+	color: #fff;
+	font-size: 2.3em;
+	justify-content: center;
+	display: flex;
+	margin: 60px;
+	font-weight: bold;
+	cursor: pointer;
+	transition: .5s ease-in-out;
+}
+input{
+	width: 60%;
+	height: 40px;
+	background: #e0dede;
+	justify-content: center;
+	display: flex;
+	margin: 20px auto;
+	padding: 10px;
+	border: none;
+	outline: none;
+	border-radius: 5px;
+}
+button{
+	
+	margin: 10px auto;
+	justify-content: center;
+	display: block;
+	color: #fff;
+	background: #0004ff;
+	font-size: 1em;
+	font-weight: bold;
+	margin-top: 20px;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	transition: .2s ease-in;
+	cursor: pointer;
+}
+button:hover{
+	background: #24163d;
+}
+.signup{
+	position: relative;
+	width:100%;
+	height: 100%;
+	
+}
+.main:hover{
+	background: rgb(30, 53, 116);
+  } 
+
+.login{
+	height: 460px;
+	background: #eee;
+	border-radius: 60% / 10%;
+	transform: translateY(-180px);
+	transition: .8s ease-in-out;
+}
+.custom:hover{
+	background: #0ada0a;
+}
+.login label{
+	color: #27056b;
+	transform: scale(.6);
+}
+
+#chk:checked ~ .login{
+	transform: translateY(-500px);
+}
+#chk:checked ~ .login label{
+	transform: scale(1);	
+}
+#chk:checked ~ .signup label{
+	transform: scale(.6);
+}
