--- a/css/blog.css
+++ b/css/blog.css
@@ -79,6 +79,12 @@ footer{
     font-size: 38px;
     font-family:'Times New Roman', Times, serif;
   }
+  .txt3{
+	text-align: center;
+	color: rgb(255, 255, 255);
+	font-size: 20px;
+	font-family:'Times New Roman', Times, serif;
+  }
   nav{background-color: #070720;
 	height: 80px;
   }
