--- a/css/blog.css
+++ b/css/blog.css
@@ -78,6 +78,12 @@ footer{
     color: rgb(255, 255, 255);
     font-size: 38px;
     font-family:'Times New Roman', Times, serif;
+	text-decoration: underline;
+  }
+  .tx2{
+    color: rgb(255, 255, 255);
+    font-size: 43px;
+    font-family:'Times New Roman', Times, serif;
   }
   .txt3{
 	text-align: center;
@@ -91,8 +97,8 @@ footer{
   
  .main{
 	
-	width: 400px;
-	height: 430px;	
+	width: 500px;
+	height: 500px;	
 	overflow: hidden;
 	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
 	border-radius: 10px;
