--- a/css/blog.css
+++ b/css/blog.css
@@ -3,191 +3,187 @@ body {
   /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
   url(/Img/home2pic1.png);
   /* background-image:url(/Img/home2pic1.png); */
--webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover; 
-margin: 1.5;
-padding: 1.5;   
-
-   }
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin: 1.5;
+  padding: 1.5;
+}
 #blog-container {
-    margin-top: 14px;
-    margin-bottom: 15px;
+  margin-top: 14px;
+  margin-bottom: 15px;
 }
-.nav1{
-    font-size: 50px;
-		font-family: Georgia,Times,Times New Roman,serif;
+.nav1 {
+  font-size: 50px;
+  font-family: Georgia, Times, Times New Roman, serif;
 }
 
-a:hover{
-    color:rgb(15, 106, 180)
+a:hover {
+  color: rgb(15, 106, 180);
 }
 
 #image-slider {
-    padding-left: 0px;
-    padding-right: 0px;
-} 
-  
- .customheight{
-  max-width: 800px;
-   height:160px;
-    border-radius: 3px; 
-    display:block;
-    margin-left: auto;
-    margin-right: auto;
-}  
-  
-footer{
-  background-color: #07072c;
-  font-family:'Times New Roman', Times, serif;
+  padding-left: 0px;
+  padding-right: 0px;
 }
-.footerheight{
-	max-height: 100px;
+
+.customheight {
+  max-width: 800px;
+  height: 160px;
+  border-radius: 3px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer {
+  background-color: #181553;
+
+  /* font-family:'Times New Roman', Times, serif; */
+}
+.footerheight {
+  max-height: 100px;
 }
 .textcontent {
   color: rgb(255, 255, 255);
   text-decoration: none;
-  font-size: 15px;
-  
+  font-size: 19px;
 }
 .border-left {
   border-left: 1px solid #dee2e6 !important;
- }
- .d-block:hover {
+}
+.d-block:hover {
   color: rgb(0, 0, 0);
   background-color: #ddd;
   border-radius: 20px;
-  box-shadow: 0px 100px 100px 0px rgba(0, 0, 0, 0.2);}
-  .nav-link:hover{
-    color: rgb(0, 0, 0);
+  box-shadow: 0px 100px 100px 0px rgba(0, 0, 0, 0.2);
+}
+.nav-link:hover {
+  color: rgb(0, 0, 0);
   background-color: rgb(69, 66, 85);
   border-radius: 3px;
   box-shadow: 0px 100px 100px 0px rgba(0, 0, 0, 0.2);
-  }
-  .txt{
-    font-size: 40px;
-    font-family:'Times New Roman', Times, serif;
-  }
-  .txt1{
+}
+.txt {
+  font-size: 40px;
+  font-family: "Times New Roman", Times, serif;
+}
+.txt1 {
+  font-size: 30px;
+  font-family: "Times New Roman", Times, serif;
+}
+.txt2 {
+  color: rgb(255, 255, 255);
+  font-size: 38px;
+  font-family: "Times New Roman", Times, serif;
+  text-decoration: underline;
+}
+.tx2 {
+  color: rgb(255, 255, 255);
+  font-size: 43px;
+  font-family: "Times New Roman", Times, serif;
+}
+.txt3 {
+  text-align: center;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-family: "Times New Roman", Times, serif;
+}
+nav {
+  background-color: #181553;
+  height: 80px;
+}
 
-    font-size: 30px;
-    font-family:'Times New Roman', Times, serif;
-  }
-  .txt2{
-    color: rgb(255, 255, 255);
-    font-size: 38px;
-    font-family:'Times New Roman', Times, serif;
-	text-decoration: underline;
-  }
-  .tx2{
-    color: rgb(255, 255, 255);
-    font-size: 43px;
-    font-family:'Times New Roman', Times, serif;
-  }
-  .txt3{
-	text-align: center;
-	color: rgb(255, 255, 255);
-	font-size: 20px;
-	font-family:'Times New Roman', Times, serif;
-  }
-  nav{background-color: #070720;
-	height: 80px;
-  }
-  
- .main{
-	
-	width: 500px;
-	height: 500px;	
-	overflow: hidden;
-	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
-	border-radius: 10px;
-	box-shadow: 10px 25px 55px rgba(0, 0, 0, 0.644);
+.main {
+  width: 500px;
+  height: 500px;
+  overflow: hidden;
+  background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38")
+    no-repeat center/ cover;
+  border-radius: 10px;
+  box-shadow: 10px 25px 55px rgba(0, 0, 0, 0.644);
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
   border-color: #0ada0a;
   border: 300px;
- }
-
-
-
-#chk{
-	display: none;
 }
 
-label{
-	color: #fff;
-	font-size: 2.3em;
-	justify-content: center;
-	display: flex;
-	margin: 60px;
-	font-weight: bold;
-	cursor: pointer;
-	transition: .5s ease-in-out;
-}
-input{
-	width: 60%;
-	height: 40px;
-	background: #e0dede;
-	justify-content: center;
-	display: flex;
-	margin: 20px auto;
-	padding: 10px;
-	border: none;
-	outline: none;
-	border-radius: 5px;
-}
-button{
-	
-	margin: 10px auto;
-	justify-content: center;
-	display: block;
-	color: #fff;
-	background: #0004ff;
-	font-size: 1em;
-	font-weight: bold;
-	margin-top: 20px;
-	outline: none;
-	border: none;
-	border-radius: 5px;
-	transition: .2s ease-in;
-	cursor: pointer;
+#chk {
+  display: none;
 }
 
-button:hover{
-	background: #24163d;
+label {
+  color: #fff;
+  font-size: 2.3em;
+  justify-content: center;
+  display: flex;
+  margin: 60px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
 }
-.signup{
-	position: relative;
-	width:100%;
-	height: 100%;
-	
+input {
+  width: 60%;
+  height: 40px;
+  background: #e0dede;
+  justify-content: center;
+  display: flex;
+  margin: 20px auto;
+  padding: 10px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+button {
+  margin: 10px auto;
+  justify-content: center;
+  display: block;
+  color: #fff;
+  background: #0004ff;
+  font-size: 1em;
+  font-weight: bold;
+  margin-top: 20px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  transition: 0.2s ease-in;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #24163d;
+}
+.signup {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 /* .main:hover{
 	background: rgb(255, 255, 255);
   }  */
 
-.login{
-	height: 460px;
-	background: #eee;
-	border-radius: 60% / 10%;
-	transform: translateY(-180px);
-	transition: .8s ease-in-out;
+.login {
+  height: 460px;
+  background: #eee;
+  border-radius: 60% / 10%;
+  transform: translateY(-180px);
+  transition: 0.8s ease-in-out;
 }
-.custom:hover{
-	background: #0ada0a;
+.custom:hover {
+  background: #0ada0a;
 }
-.login label{
-	color: #27056b;
-	transform: scale(.6);
+.login label {
+  color: #27056b;
+  transform: scale(0.6);
 }
 
-#chk:checked ~ .login{
-	transform: translateY(-500px);
+#chk:checked ~ .login {
+  transform: translateY(-500px);
 }
-#chk:checked ~ .login label{
-	transform: scale(1);	
+#chk:checked ~ .login label {
+  transform: scale(1);
 }
-#chk:checked ~ .signup label{
-	transform: scale(.6);
+#chk:checked ~ .signup label {
+  transform: scale(0.6);
 }
