--- a/css/style4.css
+++ b/css/style4.css
@@ -1,7 +1,7 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
   font-family: "Poppins", sans-serif;
-  background: #fafafa;
+  background: #cecaca;
 }
 
 p {
@@ -22,7 +22,7 @@ a:focus {
 
 .navbar {
   padding: 15px 10px;
-  background: #fff;
+  background: rgb(255, 249, 249);
   border: none;
   border-radius: 0;
   margin-bottom: 40px;
@@ -272,4 +272,82 @@ a.article:hover {
   #sidebarCollapse span {
     display: none;
   }
+}
+
+select {
+  height: 40px;
+  background: #e0dede;
+  width: 430px;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+
+#blog-container {
+  margin-top: 14px;
+  margin-bottom: 15px;
+}
+
+.d-block:hover {
+  color: rgb(0, 0, 0);
+  background-color: #ddd;
+  border-radius: 20px;
+  box-shadow: 0px 100px 100px 0px rgba(0, 0, 0, 0.2);
+}
+
+.txt1 {
+  text-align: center;
+  font-size: 50px;
+  font-family: "Times New Roman", Times, serif;
+  color: rgb(255, 255, 255);
+}
+.txt2 {
+  text-align: center;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-family: "Times New Roman", Times, serif;
+}
+
+ul {
+  list-style: none;
+}
+.main {
+  width: 1350px;
+  height: 700px;
+  overflow: hidden;
+  background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38")
+    no-repeat center/ cover;
+  border-radius: 10px;
+  box-shadow: 10px 25px 55px rgba(0, 0, 0, 0.644);
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-color: #0ada0a;
+}
+.custom1 {
+  background-color: #6d6b70;
+}
+/* .custom1:hover {
+  background-color: #5c5b5e;
+} */
+
+label {
+  text-align: center;
+  color: #ddd;
+  font-size: 20px;
+  float: left;
+  width: 100px;
+}
+input {
+  width: 430px;
+  height: 40px;
+  background: #e0dede;
+  justify-content: center;
+  display: flex;
+  margin: 20px auto;
+  padding: 10px;
+  border: 1px solid black;
+  outline: none;
+  border-radius: 5px;
+}
+.align {
+  text-align: center;
 }
