--- a/css/style7.css
+++ b/css/style7.css
@@ -312,7 +312,7 @@ ul {
 }
 .main {
   width: 1000px;
-  height: 580px;
+  height: 500px;
   overflow: hidden;
   background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38")
     no-repeat center/ cover;
@@ -323,7 +323,7 @@ ul {
   border-color: #0ada0a;
 }
 .custom1 {
-  background-color: #838285;
+  background-color: #6d6b70;
 }
 .custom1:hover {
   background-color: #6d6b70;
@@ -334,10 +334,10 @@ label {
   color: #ddd;
   font-size: 30px;
   float: left;
-  width: 300px;
+  width: 200px;
 }
 input {
-  width: 530px;
+  width: 300px;
   height: 40px;
   background: #e0dede;
   justify-content: center;
