--- a/css/blog.css
+++ b/css/blog.css
@@ -10,6 +10,31 @@ body {
   margin: 1.5;
   padding: 1.5;
 }
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+/* .wrapper {
+  display: flex;
+  align-items: stretch;
+}
+
+#sidebar {
+  min-width: 250px;
+  max-width: 250px;
+  background: #181553;
+  color: #fff;
+  transition: all 0.3s;
+}
+#content {
+  width: 100%;
+  padding: 20px;
+  min-height: 100vh;
+  transition: all 0.3s;
+} */
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
 #blog-container {
   margin-top: 14px;
   margin-bottom: 15px;
@@ -29,8 +54,8 @@ a:hover {
 }
 
 .customheight {
-  max-width: 800px;
-  height: 160px;
+  max-width: 400px;
+  height: 200px;
   border-radius: 3px;
   display: block;
   margin-left: auto;
@@ -39,11 +64,11 @@ a:hover {
 
 footer {
   background-color: #181553;
-
+  /* max-height: 80px; */
   /* font-family:'Times New Roman', Times, serif; */
 }
 .footerheight {
-  max-height: 100px;
+  max-height: 80px;
 }
 .textcontent {
   color: rgb(255, 255, 255);
@@ -59,12 +84,12 @@ footer {
   border-radius: 20px;
   box-shadow: 0px 100px 100px 0px rgba(0, 0, 0, 0.2);
 }
-.nav-link:hover {
+/* .nav-link:hover {
   color: rgb(0, 0, 0);
   background-color: rgb(69, 66, 85);
   border-radius: 3px;
   box-shadow: 0px 100px 100px 0px rgba(0, 0, 0, 0.2);
-}
+} */
 .txt {
   font-size: 40px;
   font-family: "Times New Roman", Times, serif;
@@ -107,6 +132,11 @@ nav {
   font-family: Arial, Helvetica, sans-serif;
   border-color: #0ada0a;
   border: 300px;
+}
+.casol {
+  width: 400px;
+  /* border-radius: 100px; */
+  box-shadow: 30px 70px 95px rgba(0, 0, 0, 0.644);
 }
 
 #chk {
@@ -159,9 +189,6 @@ button:hover {
   width: 100%;
   height: 100%;
 }
-/* .main:hover{
-	background: rgb(255, 255, 255);
-  }  */
 
 .login {
   height: 460px;
