--- a/css/signup.css
+++ b/css/signup.css
@@ -56,7 +56,7 @@ select {
 }
 
 footer {
-  background-color: #07072c;
+  background-color: #181553;
   font-family: "Times New Roman", Times, serif;
 }
 .footerheight {
@@ -76,12 +76,12 @@ footer {
   border-radius: 20px;
   box-shadow: 0px 100px 100px 0px rgba(0, 0, 0, 0.2);
 }
-.nav-link:hover {
+/* .nav-link:hover {
   color: rgb(0, 0, 0);
   background-color: rgb(69, 66, 85);
   border-radius: 3px;
   box-shadow: 0px 100px 100px 0px rgba(0, 0, 0, 0.2);
-}
+} */
 .txt {
   font-size: 40px;
   font-family: "Times New Roman", Times, serif;
@@ -99,7 +99,7 @@ footer {
   font-family: "Times New Roman", Times, serif;
 }
 nav {
-  background-color: #070720;
+  background-color: #181553;
   height: 80px;
 }
 ul {
