--- a/css/signup.css
+++ b/css/signup.css
@@ -119,7 +119,7 @@ ul {
   border-color: #0ada0a;
 }
 .custom1 {
-  background-color: #6d6b70;
+  background-color: #838285;
 }
 .custom1:hover {
   background-color: #6d6b70;
