--- a/css/blog.css
+++ b/css/blog.css
@@ -91,22 +91,23 @@ footer {
   box-shadow: 0px 100px 100px 0px rgba(0, 0, 0, 0.2);
 } */
 .txt {
-  font-size: 40px;
+  font-size: 30px;
   font-family: "Times New Roman", Times, serif;
 }
 .txt1 {
-  font-size: 30px;
+  color: rgb(255, 255, 255);
+  font-size: 32px;
   font-family: "Times New Roman", Times, serif;
 }
 .txt2 {
   color: rgb(255, 255, 255);
-  font-size: 38px;
+  font-size: 30px;
   font-family: "Times New Roman", Times, serif;
   text-decoration: underline;
 }
 .tx2 {
   color: rgb(255, 255, 255);
-  font-size: 43px;
+  font-size: 30px;
   font-family: "Times New Roman", Times, serif;
 }
 .txt3 {
@@ -121,8 +122,8 @@ nav {
 }
 
 .main {
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 450px;
   overflow: hidden;
   background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38")
     no-repeat center/ cover;
