--- a/css/style5.css
+++ b/css/style5.css
@@ -305,7 +305,7 @@ ul {
 }
 .main {
   width: 1050px;
-  height: 520px;
+  height: 720px;
   overflow: hidden;
   background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38")
     no-repeat center/ cover;
@@ -380,9 +380,11 @@ textarea {
   resize: none;
 } */
 .align {
-  text-align: left;
+ /* float: right; */
 }
-
+a{color:#ddd;
+  text-decoration: none;
+}
 button {
   margin: 10px auto;
   justify-content: center;
