--- a/css/style5.css
+++ b/css/style5.css
@@ -274,7 +274,6 @@ a.article:hover {
   }
 }
 
-
 #blog-container {
   margin-top: 14px;
   margin-bottom: 15px;
@@ -304,8 +303,8 @@ ul {
   list-style: none;
 }
 .main {
-  width: 1050px;
-  height: 720px;
+  width: 1030px;
+  height: 580px;
   overflow: hidden;
   background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38")
     no-repeat center/ cover;
@@ -380,9 +379,10 @@ textarea {
   resize: none;
 } */
 .align {
- /* float: right; */
+  /* float: right; */
 }
-a{color:#ddd;
+a {
+  color: #ddd;
   text-decoration: none;
 }
 button {
