--- a/css/blog.css
+++ b/css/blog.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #838285;
+  background-color: #b4b1b1;
   /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
   url(/Img/home2pic1.png);
   /* background-image:url(/Img/home2pic1.png); */
