--- a/views/localproduce.pug
+++ b/views/localproduce.pug
@@ -76,12 +76,12 @@ head
             button.btn.btn-dark.d-inline-block.d-lg-none.ml-auto(type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
               i.fas.fa-align-justify
           .col-md-10
-            h2(style='margin-left:15px;margin-top: 20px;') Karibu Groceries Ltd, FARM PRODUCT. 
+            h2(style='margin-left:15px;margin-top: 20px;color: #181553;') Karibu Groceries Ltd, FARM PRODUCT. 
         #navbarSupportedContent.collapse.navbar-collapse.col-md-1
           ul.nav.navbar-nav.ml-auto
             li.nav-item.active
               button.btn.btn-outline-primary
-                a.nav-link(href='index.html' style='color:#000000; ') LogOut
+                a.nav-link(href='index.html' style='color: #181553; ') LogOut
     // <h2 style="font-size:45px;color:rgb(51, 49, 49); text-decoration: underline;">Produce Procurement Karibu
     // Groceries Limited. </h2>
     #blog-container.container-fluid
