--- a/views/signup.pug
+++ b/views/signup.pug
@@ -39,14 +39,14 @@ nav.navbar.navbar-expand-lg.navbar-dark
               .col.col-md-6(style='margin-right: 0px; border-right: 0px')
                 div
                   .align
-                    label.form-label 1st Name
+                    label.form-label First Name
                     input(type='text' name='fname' placeholder='* First Name ' required='' size='22' onblur='userval(5,22)')
                     //
                       <div class="invalid-feedback" style="border: 0px; padding: 0px; font-size: 15px">
                       Valid username is required.
                       </div>
                   .align
-                    label.form-label 2nd Name
+                    label.form-label Second Name
                     input(type='text' name='sname' placeholder='* Second Name' required='' size='22' onblur='userval1(5,22)')
                   .align
                     label.form-label Gender
@@ -93,7 +93,7 @@ nav.navbar.navbar-expand-lg.navbar-dark
             div
               button.custom.txt2(style='width: 40%; height: 50px' type='submit')
                 a.txt2(href='#') SignUp 
-              h5.txt2(style='color: black')
+              h5.txt2(style=' color:#181553;')
                 | * By clicking on Signup you agree to the terms and
                 | conditions *
 footer.page-footer.font-small.blue.pt-4
