--- a/public/css/style6.css
+++ b/public/css/style6.css
@@ -184,7 +184,7 @@ a[data-toggle="collapse"] {
 ul ul a {
   font-size: 0.9em !important;
   padding-left: 30px !important;
-  background: #181553;
+  background: #07026d;
 }
 
 ul.CTAs {
