--- a/views/index.pug
+++ b/views/index.pug
@@ -19,9 +19,11 @@ nav.navbar.navbar-expand-lg.navbar-dark
       ul.navbar-nav.me-auto.mb-2.mb-lg-0
         li.nav-item
           p.nav-link.active.nav1(aria-current='page') Karibu Groceries Limited .
-      form.d-flex
-        button.btn.btn-outline-primary.txt3(style=' float: left; height: 50px;' type='submit')
-          a(href='signup.html' style='text-decoration:none; color:azure') Signup
+      //
+        <form class="d-flex">
+        <button class="btn btn-outline-primary txt3" style=" float: left; height: 50px;" type="submit">
+        <a href="signup.html" style="text-decoration:none; color:azure">Signup</a></button>
+        </form>
 // Page Content
 #blog-container.container-fluid
   .row
@@ -32,10 +34,10 @@ nav.navbar.navbar-expand-lg.navbar-dark
       h3.txt2(style=' margin-left: 30px; ')
         | &quot;FEEDING THE NATION.&quot;
       div
-        img.card-img-top.d-none.d-md-block(src='./Img/logo5.jpg' style='width:200px; height:200px; 	\
-        box-shadow: 5px 20px 50px #000;border-radius: 30px; margin-left: 30px;margin-top: 40px;' alt='Me In Class on Day on3')
+        img.card-img-top.d-none.d-md-block(src='./Img/logo5.jpg' style='width:auto; height:auto; 	\
+        box-shadow: 5px 20px 50px #000;border-radius: 30px; margin-left: 100px;margin-top: 40px;' alt='Me In Class on Day on3')
     .col.col-md-5
-      .main(style='background-color: #6d6b70;')
+      .main(style=' background-color: #100b69')
         input#chk(type='checkbox' aria-hidden='true')
         .signup
           form
@@ -55,9 +57,9 @@ nav.navbar.navbar-expand-lg.navbar-dark
             button.custom(style='width: 60%;\
             height:50px;')
               a(href='signup.html' style='text-decoration: none; color: azure;') Sign up
-    .col-md-2.mt-md-0.mt-3
-      .row.container-fluid(style='margin-top:20px;padding:0%')
-        #image-slider.container-fluid.d-none.d-md-block.col.col-md-12.casol
+    .col-md-3.mt-md-0.mt-3
+      .row
+        #image-slider.container-fluid.d-none.d-md-block.col.col-md-12.casol(style='margin-top:50px ;margin-right:auto;padding-left:0px;')
           #carouselExampleCaptions1.carousel.slide(data-bs-ride='carousel')
             .carousel-indicators
               button.active(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide-to='0' aria-current='true' aria-label='Slide 0')
@@ -66,49 +68,72 @@ nav.navbar.navbar-expand-lg.navbar-dark
               button(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide-to='3' aria-label='Slide 3')
             .carousel-inner
               .carousel-item.active
-                img.customheight(src='./Img/maize1.jpg' alt='...')
+                img.customheight(src='./Img/beans2.jpg' alt='...')
               .carousel-item
-                img.customheight(src='./Img/maize2.jpg' alt='...')
+                img.customheight(src='./Img/beans1.jpg' alt='...')
               .carousel-item
-                img.customheight(src='./Img/maize3.jpg' alt='...')
+                img.customheight(src='./Img/beans4.jpg' alt='...')
               .carousel-item
-                img.customheight(src='./Img/maize4.jpg' alt='...')
+                img.customheight(src='./Img/gnuts2.jpg' alt='...')
             button.carousel-control-prev(type='button' data-bs-target='#carouselExampleCaptions1' data-bs-slide='prev')
               span.carousel-control-prev-icon(aria-hidden='true')
               span.visually-hidden Previous
             button.carousel-control-next(type='button' data-bs-target='#carouselExampleCaptions1' data-bs-slide='next')
               span.carousel-control-next-icon(aria-hidden='true')
               span.visually-hidden Next
-      .row.container-fluid(style='margin-top:20px;padding:0%')
-        #image-slider.container-fluid.d-none.d-md-block.col.col-md-12.casol
-          #carouselExampleCaptions2.carousel.slide(data-bs-ride='carousel')
-            .carousel-indicators
-              button.active(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide-to='0' aria-current='true' aria-label='Slide 0')
-              button(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide-to='1' aria-label='Slide 1')
-              button(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide-to='2' aria-label='Slide 2')
-              button(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide-to='3' aria-label='Slide 3')
-            .carousel-inner
-              .carousel-item.active
-                img.customheight(src='./Img/maize7.jpg' alt='...')
-              .carousel-item
-                img.customheight(src='./Img/maize6.jpg' alt='...')
-              .carousel-item
-                img.customheight(src='./Img/maize5.jpg' alt='...')
-              .carousel-item
-                img.customheight(src='./Img/maize8.jpg' alt='...')
-            button.carousel-control-prev(type='button' data-bs-target='#carouselExampleCaptions2' data-bs-slide='prev')
-              span.carousel-control-prev-icon(aria-hidden='true')
-              span.visually-hidden Previous
-            button.carousel-control-next(type='button' data-bs-target='#carouselExampleCaptions2' data-bs-slide='next')
-              span.carousel-control-next-icon(aria-hidden='true')
-              span.visually-hidden Next
+      //
+        <div class="row container-fluid " style="margin-top:20px;padding:0%">
+        <div class="container-fluid d-none d-md-block col col-md-12 casol" id="image-slider">
+        <div id="carouselExampleCaptions2" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 0"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+        aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+        <img src="./Img/maize7.jpg" class=" customheight" alt="...">
+        </div>
+        <div class="carousel-item">
+        <img src="./Img/maize6.jpg" class="  customheight" alt="...">
+        </div>
+        <div class="carousel-item">
+        <img src="./Img/maize5.jpg" class="  customheight" alt="...">
+        </div>
+        <div class="carousel-item">
+        <img src="./Img/maize8.jpg" class=" customheight" alt="...">
+        </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions2"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions2"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+        </button>
+        </div>
+        </div>
+        </div>
 footer.page-footer.font-small.blue.pt-4
   .container-fluid.text-center.text-md-left
     .row
-      .col-md-2.mt-md-0.mt-3
-        div(style='margin-top: 5px;')
-          img.card-img-top(src='./Img/logo5.jpg' style='width:80px; height:80px;margin-bottom: 5px;margin-top: 5px; border-radius: 10px;' alt='Me In Class on Day on3')
-      .col-md-10.mt-md-0.mt-3.footer-copyright.text-center.py-3.textcontent
+      //
+        <div class="col-md-2 mt-md-0 mt-3">
+        <div style="margin-top: 5px;">
+        <img src="./Img/logo5.jpg" class="card-img-top"
+        style="width:80px; height:80px;margin-bottom: 5px;margin-top: 5px; border-radius: 10px;"
+        alt="Me In Class on Day on3">
+        </div>
+        </div>
+      .col-md-12.mt-md-0.mt-3.footer-copyright.text-center.py-3.textcontent
         | &copy; 2022 Copyright:
         | Karibu Groceries LTD
 //
