--- a/views/salesinput.pug
+++ b/views/salesinput.pug
@@ -3,14 +3,12 @@ head
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   meta(http-equiv='X-UA-Compatible' content='IE=edge')
-  title Karibu Groceries Ltd/purchases
+  title Collapsible sidebar using Bootstrap 4
   // Bootstrap CSS CDN
-  link(href='css/bootstrap/css/bootstrap.min.css' rel='stylesheet')
-  //
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-    integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    Our Custom CSS
-  link(rel='stylesheet' href='css/style5.css')
+  //link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css' integrity='sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4' crossorigin='anonymous')
+  link(href='/css/bootstrap/css/bootstrap.min.css' rel='stylesheet')
+  // Our Custom CSS
+  link(rel='stylesheet' href='/css/style5.css')
   // Font Awesome JS
   script(defer='' src='https://use.fontawesome.com/releases/v5.0.13/js/solid.js' integrity='sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ' crossorigin='anonymous')
   script(defer='' src='https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js' integrity='sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY' crossorigin='anonymous')
@@ -18,35 +16,51 @@ head
   // Sidebar
   nav#sidebar
     .sidebar-header
-      h3
-        img(src='./Img/logo5.jpg' style='width:160px; height:160px; border-radius: 3px; background-color: #ddd;')
+      h3 
+        img(src='/Img/logo5.jpg' style='width:160px; height:160px; border-radius: 3px; background-color: #ddd;')
       strong KGL
     ul.list-unstyled.components(style='font-size: 19px;')
       li
         a(href='#')
           i.fas.fa-home
-          |                         Home
-      li
-        a(href='Produce purchases.html')
+          |                         Home 
+      li        
+        a.dropdown-toggle(href='#pageSubmenu' data-toggle='collapse' aria-expanded='false' )
           i.fas.fa-copy
-          |                         Purchases
-      li.active
-        a(href='sales input.html' style='color:#181553')
+          |                           Purchases
+        ul#pageSubmenu.collapse.list-unstyled
+          li
+            a(href='/purchases') Purchase Form
+          li            
+            a(href='/purchaselist') Purchase Record           
+      li.active     
+        a.dropdown-toggle(href='#pageSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553')
           i.fas.fa-copy
-          |                         Sales
+          |                           Sales
+        ul#pageSubmenu.collapse.list-unstyled
+          li
+            a(href='/sales') Sales Form
+          li
+            a(href='/saleslist') Sales Record
+      li        
+        a.dropdown-toggle(href='#pageSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553')
+          i.fas.fa-copy
+          |                           Farm
+        ul#pageSubmenu.collapse.list-unstyled
+          li
+            a(href='/farm') Farm Form
+          li
+            a(href='/farmlist') Farm Record          
       li
-        a(href='#')
+        a(href='/sales')
           i.fas.fa-briefcase
-          |                         About
+          |                         Farm      
       li
-        a(href='#')
-          i.fas.fa-paper-plane
-          |                         Contact
-      li
-        a(href='account.html')
+        a(href='')
           i.fas.fa-user
           |                         Account
-  // Page Content
+    ul.list-unstyled.CTAs      
+  // Page Content  
   #content
     nav.navbar.navbar-expand-lg.navbar-light(style='background:#efeef0')
       .container-fluid.row
@@ -57,12 +71,14 @@ head
             button.btn.btn-dark.d-inline-block.d-lg-none.ml-auto(type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
               i.fas.fa-align-justify
           .col-md-10
-            h2(style='margin-left:15px;margin-top: 20px;') Karibu Groceries Ltd, PRODUCT SALES FORM
+            h2(style='margin-left:15px;margin-top: 20px; color:#181553;')
+              | Karibu Groceries Ltd, PRODUCT
+              | SALES FORM
         #navbarSupportedContent.collapse.navbar-collapse.col-md-1
           ul.nav.navbar-nav.ml-auto
             li.nav-item.active
               button.btn.btn-outline-primary
-                a.nav-link(href='index.html' style='color:#000000; ') LogOut
+                a.nav-link(href='index.html' style='color:#181553;  ') LogOut
     #blog-container.container-fluid
       .row
         .col-md-12
@@ -70,19 +86,19 @@ head
             h2.txt1(style='font-size:45px;text-decoration: underline;')
               | Customer Sales Form
             .signup
-              form.needs-validation(name='registration' novalidate='')
+              form.needs-validation(name='registration' novalidate='' action="/sales" method="POST")
                 .row(onsubmit='')
                   .col.col-md-6
                     .align
                       label.form-label KGL Branch:
-                      select(name='brnch' onblur='branch()')
+                      select(name='branch' onblur='branch()')
                         option(value='Default')
                           | KGL Branch
-                        option(value='mg') MAGANJO Branch
-                        option(value='ma') MATUGGA Branch
+                        option(value='Maganjo') MAGANJO Branch
+                        option(value='Matugga') MATUGGA Branch
                     .align
                       label.form-label Customer Name:
-                      input(type='text' name='fname' placeholder='*Customer Name ' required='' size='32' onblur='cname()')
+                      input(type='text' name='customername' placeholder='*Customer Name ' required='' size='32' onblur='cname()')
                       .invalid-feedback
                         | Enter a valid Customer name.
                     .align
@@ -95,12 +111,12 @@ head
                       select(name='pdct' onblur='pdt()')
                         option(value='Default')
                           | Agricultural Product
-                        option(value='sa') Beans
-                        option(value='ma') Maize
-                        option(value='dr') Cow Peas
-                        option(value='sa') Beans
-                        option(value='ma') Maize
-                        option(value='ot') Others
+                        option(value='Beans') Beans
+                        option(value='Maize') Maize
+                        option(value='Cow_Peas') Cow Peas
+                        option(value='Beans') Beans
+                        option(value='Maize') Maize
+                        option(value='Others') Others
                     div
                       label.form-label(for='start') Purchase Date:
                       input(type='date' name='date' value='' min='1960-01-01' max='2100-12-31' onblur='dte()')
@@ -124,14 +140,14 @@ head
                         | Please enter a Quantity in tonnnes.
                     .align
                       label.form-label Total Amount (shs):
-                      input#txtresult(type='text' name='TextBox3' placeholder='*Amount(shs).' disabled='')
+                      input#txtresult(type='text' name='total' placeholder='*Amount(shs).' )
                     .align
                       label.form-label  Sale Type:
-                      select(name='sale' onblur='sales()')
+                      select(name='sale_type' onblur='sales()')
                         option(value='Default')
                           | Sale type.
-                        option(value='ca') Cash
-                        option(value='cr') Credit
+                        option(value='Cash') Cash
+                        option(value='Credit') Credit
                       .invalid-feedback
                         | Please enter a sale type
                     .align
@@ -140,7 +156,7 @@ head
                       .invalid-feedback
                         | Please enter a valid comment
                   .col.col-md-12
-                    button.custom(style='width: 40%;margin-top: 0px;height:50px;' type='submit')
+                    button.custom(style='width: 40%;margin-top: 0px;height:50px;margin-left:350px;' type='submit')
                       | Confirm
                       | Sale
 footer.page-footer.font-small.blue.pt-4
@@ -148,21 +164,17 @@ footer.page-footer.font-small.blue.pt-4
     .row
       .col-md-2.mt-md-0.mt-3
         div
-          img.card-img-top(src='./Img/logo5.jpg' style='width:50px; height:50px; border-radius: 10px;' alt='Me In Class on Day on3')
+          img.card-img-top(src='/Img/logo5.jpg' style='width:50px; height:50px; border-radius: 10px;' alt='Me In Class on Day on3')
       .col-md-10.mt-md-0.mt-3.footer-copyright.text-center.py-3.textcontent
         | &copy; 2022 Copyright:
         | Karibu Groceries LTD
-script(src='js/sales.js')
-// jQuery CDN - Slim version (=without AJAX)
+  // jQuery CDN - Slim version (=without AJAX)
 script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
 // Popper.JS
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js' integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ' crossorigin='anonymous')
 // Bootstrap JS
-//
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-  integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
-  crossorigin="anonymous"></script>
-script(src='css/bootstrap/js/bootstrap.bundle.min.js')
+script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js' integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm' crossorigin='anonymous')
+script(src='/js/sales.js')
 script(type='text/javascript').
   $(document).ready(function () {
   $('#sidebarCollapse').on('click', function () {
